storing mac address

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <include layout="@layout/content_main"
+        android:id="@+id/include" />
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:rippleColor="@color/colorPrimary"
-        app:srcCompat="@android:drawable/ic_input_add"/>
+        android:layout_gravity="top|center_horizontal"
+        android:text="Set up car device"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="center_vertical|center_horizontal"
+        android:visibility="invisible"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
